# wcw-wallet-testnet-sc

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmake.sh  deploy.sh
cmd/: command.txt
include/: utils.hpp  wcwwallettestnet.hpp
include/tables/: config.hpp  structs.hpp
src/: CMakeLists.txt  wcwwallettestnet.cpp
